# bca-mcp-python

./: .gitignore  CHANGELOG.md  HANDOFF.md  LICENSE  PORT_MANIFEST.md  README.md  pyproject.toml  requirements.lock.txt
docs/: langchain_submission.md
examples/: claude_desktop.json  eliza_plugin.md  generic_agent.py  langchain_agent.py
scripts/: demo-key.txt  gen_demo_key.py
src/bca_mcp/: __init__.py  __main__.py  _demo_banner.py  client.py  errors.py  server.py  types.py
src/bca_mcp/cli/: __init__.py  config.py  main.py  render.py  runner.py
src/bca_mcp/tools/: __init__.py  agent_jobs.py  content.py  extended.py  fundamentals.py  get_entity.py  get_explainer.py  indicators.py  market.py  onchain.py  search_news.py  sentiment.py
tests/: test_agent_jobs.py  test_cli.py  test_client_security.py  test_envelope_shape.py  test_fundamentals.py  test_indicators.py  test_market.py  test_onchain.py  test_sentiment.py  test_smoke.py
