[project]
name = "bca-mcp"
version = "0.3.1"
description = "Blockchain Academics MCP server + `bca` CLI — crypto news, entity dossiers, market data, proprietary indicators, and academy explainers for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Blockchain Academics", email = "dev@blockchainacademics.com"}]
keywords = ["mcp", "crypto", "blockchain", "llm", "agents", "ai", "news"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "typer>=0.12",
  "rich>=13.7",
  "tomli-w>=1.0",
  "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
  "respx>=0.21",
  "build>=1.2",
]

[project.urls]
Homepage = "https://blockchainacademics.com"
Repository = "https://github.com/blockchainacademics/bca-mcp-python"
Issues = "https://github.com/blockchainacademics/bca-mcp-python/issues"

[project.scripts]
bca-mcp = "bca_mcp.__main__:main"
bca = "bca_mcp.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bca_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
